# stu_mgt_sys_c

./: .gitignore  CMakeLists.txt  README.md  compile.sh  students.txt  设计文档.md
include/: hash.h  sort.h
src/: display.c  fileio.c  hash.c  input.c  main.c  menu.c  sort.c  student.c  student.h
